# ai-teaching-assistant

./: .env.example  .env.production.example  .gitignore  CHANGELOG.md  PROJECT_OVERVIEW.md  README.md  STARTUP_GUIDE.md  docker-compose.prod.yml  docker-compose.registry.yml  docker-compose.yml  fix-admin.sql  seed-prompts.sql  seed-tts.sql  test-api.ps1  update-role.sql  vitts_client.py
.brain/: brain.json  domain.json  features.json  knowledge.json  project.json
backend/: .env.example  Dockerfile  check-slides.ts  debug-check.js  package-lock.json  package.json  temp_schema.sql  test-image-gen.ts  test_image_gen.ts  test_vitts.js
backend/prisma/: seed.ts  (+5 more)
backend/utils/pptx_generator/vietnormalizer/: .dockerignore  .gitignore  GITHUB_SETUP.md  LIBRARY_STRUCTURE.md  LICENSE  MANIFEST.in  PUBLISHING.md  PUBLISH_NOW.md  QUICK_PUBLISH.md  README.md  build_and_publish.sh  cog.yaml  predict.py  publish.sh  push_to_github.sh  pyproject.toml  requirements.txt  setup.py  test_normalizer.py  tts.py
backend/utils/pptx_generator/vietnormalizer/public/: acronyms.csv  non-vietnamese-words-20k.csv
backend/utils/pptx_generator/vietnormalizer/vietnormalizer/: __init__.py  detector.py  normalizer.py  processor.py  transliterator.py
backend/utils/pptx_generator/vietnormalizer/vietnormalizer/data/: __init__.py  acronyms.csv  non-vietnamese-words.csv
docs/: DEPLOYING.md  DEPLOYMENT.md  brainstorm_pptx_improvements.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
scripts/: deploy-vps.sh  deploy.sh  rollback.sh  setup-vps.sh
(+206 files in other folders)
